refactor: friends and feed